--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <nav class="main-nav">
-      <a href="">Dreams XXL</a>
+      <h3>Dreams XXL</h3>
       <div class="modals">
         <button id="open-modal">about</button>
         <button id="close-modal" class="hide">close</button>
@@ -73,7 +73,7 @@
         </footer>
       </div>
 
-      <div class="works">
+      <div id="works-container" class="works">
         <section class="week" id="week1">
           <div class="week-info">
             <h1 class="week-title">Week 1: Peoples places and things</h1>
