small css update

--- a/index.html
+++ b/index.html
@@ -68,8 +68,12 @@
         </div>
         <footer>
           <time> May 4th — May 21st 2023</time>
-          <time> Fri – Sun 18.00 — 22.00</time>
-          <address><a href="">Laak, Lulofsstraat, Den Haag</a></address>
+          <time> Fri — Sun, 19.00–22.00</time>
+          <address>
+            <a href="https://goo.gl/maps/oHv7GgMDbgn5yCqT7" target="_blank"
+              >Laak, Lulofsstraat 59, Den Haag</a
+            >
+          </address>
         </footer>
       </div>
 
@@ -80,7 +84,7 @@
             <div class="week-date">
               <time>4 may 2023 (opening)</time>
               <time>5 – 7 May 2023</time>
-              <time>19.00 – 22.00</time>
+              <time>19.00–22.00</time>
             </div>
           </div>
           <div class="work-list">
@@ -315,8 +319,8 @@
             <h1 class="week-title">Week 2: Ecstasy</h1>
             <div class="week-date">
               <time>12 – 14 May 2023</time>
-              <time>19.00 – 22.00 (opening)</time>
-              <time>00.00 – 06.00 (extended clubnight opening hours)</time>
+              <time>19.00–22.00 (opening)</time>
+              <time>00.00–06.00 (extended clubnight opening hours)</time>
             </div>
           </div>
           <div class="work-list">
@@ -389,9 +393,9 @@
                 <div class="work-header" onclick="clickHeader(this)">
                   <div class="work-artist">Sam Keogh</div>
                   <div class="work-title">
-                    <em
+                    <strong
                       >‘If you are reading this, get ready to meet me in your
-                      dream TONIGHT’</em
+                      dream TONIGHT’</strong
                     >
                     (2021)
                   </div>
@@ -448,9 +452,9 @@
                 <div class="work-header" onclick="clickHeader(this)">
                   <div class="work-artist">Marnix van Uum</div>
                   <div class="work-title">
-                    <em
+                    <strong
                       >Beep (Piep) Beep (Piep) Buzz (Zoem) Beep (Piep) Buzz
-                      (Zoem)</em
+                      (Zoem)</strong
                     >
                     (2022)
                   </div>
@@ -565,18 +569,17 @@
           <div class="week-info">
             <h1 class="week-title">Week 1: Relationships, relationships</h1>
             <div class="week-date">
-              <time>4 may 2023 (opening)</time>
-              <time>5 – 7 May 2023</time>
-              <time>19.00 – 22.00 (opening)</time>
+              <time>19 – 21 May 2023</time>
+              <time>19.00–22.0</time>
             </div>
           </div>
           <div class="work-list">
             <ul>
               <li>
                 <div class="work-header" onclick="clickHeader(this)">
-                  <div class="work-artist">Pam Virada</div>
+                  <div class="work-artist">Anna Tony</div>
                   <div class="work-title">
-                    <strong>Delirious Dream</strong> (2019)
+                    <strong>Iza Noticing Something</strong> (2022)
                   </div>
                 </div>
                 <div class="work-content">
@@ -585,30 +588,27 @@
                   </figure>
                   <div class="work-description">
                     <div class="work-meta">
-                      duration: 1m:00s, language: none
+                      duration: 0:03:31, language: none
                     </div>
                     <div class="work-text">
-                      The magpie is one of the most intelligent non-human
-                      species, able to distinguish themselves from their
-                      reflections. In many cultures, they are linked to
-                      superstitions, with the rhyme “One for the Sorrow” that
-                      illustrates how their appearances can be a form of
-                      fortune-telling. Via the embodiment of the magpie as an
-                      allegorical notion to shift away from the human-centered
-                      perspective, the film aims to create speculations of
-                      possible futures through the eyes of the magpie as a
-                      prophet—seer—diviner, reinforced by its mythical qualities
-                      retold in folklores and legends.
+                      "How do you visualise present day alienation of social
+                      encounters and the longing to connect? Everyone has their
+                      story they wanna share and tell. This is a street scene
+                      video collage made with my neighbor's, colleagues and
+                      housemates, all of them notice something outside of the
+                      frame but not each other. This scene is made to make a
+                      space with people come together. Since everyone in the
+                      video stares at something outside of the frame, they
+                      respond on their surrounding and the people watching the
+                      video."
                     </div>
                   </div>
                 </div>
               </li>
               <li>
                 <div class="work-header" onclick="clickHeader(this)">
-                  <div class="work-artist">Giovanni Giaretta</div>
-                  <div class="work-title">
-                    <strong>Ruin of a Fiction</strong> (2019)
-                  </div>
+                  <div class="work-artist">Manuel Boden</div>
+                  <div class="work-title"><strong>Cabinets</strong> (2019)</div>
                 </div>
                 <div class="work-content">
                   <figure>
@@ -616,7 +616,7 @@
                   </figure>
                   <div class="work-description">
                     <div class="work-meta">
-                      duration: 1m:00s, language: none
+                      duration: 0:25:26, language: none
                     </div>
                     <div class="work-text">
                       The video is an investigation into the archeology of
@@ -634,11 +634,9 @@
               </li>
               <li>
                 <div class="work-header" onclick="clickHeader(this)">
-                  <div class="work-artist">
-                    Cóilín O'Connell and Michelle Doyle
-                  </div>
+                  <div class="work-artist">BITSRAY</div>
                   <div class="work-title">
-                    <strong>Super Gairdín</strong> (2022)
+                    <strong>Losing My Religion</strong> (2021)
                   </div>
                 </div>
                 <div class="work-content">
@@ -650,54 +648,26 @@
                       duration: 1m:00s, language: none
                     </div>
                     <div class="work-text">
-                      Super Gairdín is a new video work by artists Cóilín
-                      O’Connell and Michelle Doyle about divine spirits,
-                      landscape, language and nature. Taking cues from the folk
-                      horror tradition, the film is set in a desolate garden
-                      centre, a space where landscape is held indefinitely. A
-                      figure wanders the aisles of saplings, chancing upon a
-                      long forgotten rock deity; the Cailleach. The Cailleach is
-                      capable of great forces, summoning nature at will and
-                      throwing rocks from her apron. She views mankind with
-                      hatred and will soon enact her revenge.
+                      "Losing My Religion is a collaboration project between
+                      BITSRAY and PHRAME, the Dutch electronic-pop band. This is
+                      a music video for PHRAME'S cover- Losing My Religion,
+                      initially written by R.E.M. By making this music video,
+                      Losing My Religion, the director aimed to use the alien
+                      angle, the mobility device she makes for her backpack, to
+                      explore the relationship between her birthplace and
+                      herself- love, distancing, dazed, dread, and concealment.
+                      BITSRAY seeks a form that she could be free to respond to
+                      create a visual dialogue with the preset monitoring
+                      system."
                     </div>
                   </div>
                 </div>
               </li>
               <li>
                 <div class="work-header" onclick="clickHeader(this)">
-                  <div class="work-artist">Giulia Jimenez</div>
-                  <div class="work-title"><strong>Cataratas</strong>(2019)</div>
-                </div>
-                <div class="work-content">
-                  <figure>
-                    <img src="" alt="thumbnail of work" />
-                  </figure>
-                  <div class="work-description">
-                    <div class="work-meta">
-                      duration: 1m:00s, language: none
-                    </div>
-                    <div class="work-text">
-                      The magpie is one of the most intelligent non-human
-                      species, able to distinguish themselves from their
-                      reflections. In many cultures, they are linked to
-                      superstitions, with the rhyme “One for the Sorrow” that
-                      illustrates how their appearances can be a form of
-                      fortune-telling. Via the embodiment of the magpie as an
-                      allegorical notion to shift away from the human-centered
-                      perspective, the film aims to create speculations of
-                      possible futures through the eyes of the magpie as a
-                      prophet—seer—diviner, reinforced by its mythical qualities
-                      retold in folklores and legends.
-                    </div>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div class="work-header" onclick="clickHeader(this)">
-                  <div class="work-artist">Joachim Schoones</div>
+                  <div class="work-artist">Dylan Spencer-Davidson</div>
                   <div class="work-title">
-                    <strong>7000-8000</strong> (2018)
+                    <strong>Affective Dynamics Study Group</strong>(2020)
                   </div>
                 </div>
                 <div class="work-content">
@@ -706,17 +676,29 @@
                   </figure>
                   <div class="work-description">
                     <div class="work-meta">
-                      duration: 1m:00s, language: none
+                      duration: 0:09:00, language: none
                     </div>
-                    <div class="work-text">A drive and a conversation</div>
+                    <div class="work-text">
+                      Affective Dynamics Study Group is a collective devoted to
+                      'study' in the Motenian sense, examining issues around
+                      interpersonal relations, non-violent communication,
+                      vulnerability, complicity and new ways of being and living
+                      together. Part consciousness-raising experiential group,
+                      part never-ending rehearsal, the collective meets to
+                      perform a series of experimental exercises together,
+                      borrowed from the fields of somatics, group therapy,
+                      activism, and movement practices. The video is based on
+                      footage from the study session and interviews with the
+                      participants.
+                    </div>
                   </div>
                 </div>
               </li>
               <li>
                 <div class="work-header" onclick="clickHeader(this)">
-                  <div class="work-artist">Anna Tamm</div>
+                  <div class="work-artist">Verena Blok</div>
                   <div class="work-title">
-                    <strong>Still Here</strong> (2022)
+                    <strong>Out Lookers</strong> (2022)
                   </div>
                 </div>
                 <div class="work-content">
@@ -725,21 +707,54 @@
                   </figure>
                   <div class="work-description">
                     <div class="work-meta">
-                      duration: 1m:00s, language: none
+                      duration: 0:07:26, language: none
                     </div>
                     <div class="work-text">
-                      TThe film drifts through a dystopian landscape where past
-                      and present breathe in sync, showing a stretch in time
-                      induced by a traumatic memory.
+                      In “Out Lookers”, Verena Blok portrays older women who
+                      reclaim their space in public. Witnessing these women age
+                      while she herself was maturing into womanhood, the
+                      dominant Western discourse privileging youthful femininity
+                      rendered them slowly invisible. The film uses snippets of
+                      candid conversation between the artist and the women about
+                      the transitional nature of femininity. At times they speak
+                      through a book they love, Olga Tokarczuk's“DriveYour
+                      PlowOverTheBonesOfThe Dead” (2009), a bleakly comic
+                      mystery novel about a post-menopausal woman who raises
+                      fierce questions about human behavior.
                     </div>
                   </div>
                 </div>
               </li>
               <li>
                 <div class="work-header" onclick="clickHeader(this)">
-                  <div class="work-artist">rustan söderling</div>
+                  <div class="work-artist">Helena Roig</div>
+                  <div class="work-title"><strong>two way</strong> (2022)</div>
+                </div>
+                <div class="work-content">
+                  <figure>
+                    <img src="" alt="thumbnail of work" />
+                  </figure>
+                  <div class="work-description">
+                    <div class="work-meta">
+                      duration: 0:14:00, language: none
+                    </div>
+                    <div class="work-text">
+                      A two way (2021) is a body of work made in dialogue.
+                      Questioning power relations generated around and dictated
+                      by the camera, Helena Roig Prats (ES/NL) and Moon Baby
+                      (ES/NL) expose their experience as sex workers while
+                      creating content for Moon Baby’s OnlyFan account. How do
+                      we reflect our intimate selves in a camera transmitted to
+                      others?
+                    </div>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="work-header" onclick="clickHeader(this)">
+                  <div class="work-artist">Giulio Squillacciotti</div>
                   <div class="work-title">
-                    <strong>Grimshader</strong> (2022)
+                    <strong>The Dispute</strong> (2021)
                   </div>
                 </div>
                 <div class="work-content">
@@ -748,47 +763,18 @@
                   </figure>
                   <div class="work-description">
                     <div class="work-meta">
-                      duration: 1m:00s, language: none
+                      duration: 00:01:15, language: none
                     </div>
                     <div class="work-text">
-                      Grimshader follows the inner monologue of an unnamed
-                      protagonist, sent by his boss Bruce Carmichael on a
-                      night-time drive with an unknown destination. Is he
-                      supposed to get a takeaway from Fusion Takeaway, the local
-                      Chinese restaurant in Stornoway? At this time of night? Or
-                      is something more nefarious going on? Is it somehow
-                      related to the ongoing investigation by Grimshader
-                      internal inquires? The dreamlike journey gradually grows
-                      more surreal and dreamlike before it reaches an abrupt
-                      end.
-                    </div>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div class="work-header" onclick="clickHeader(this)">
-                  <div class="work-artist">Clàudia del Barrio</div>
-                  <div class="work-title"><strong>GRWM</strong> (2022)</div>
-                </div>
-                <div class="work-content">
-                  <figure>
-                    <img src="" alt="thumbnail of work" />
-                  </figure>
-                  <div class="work-description">
-                    <div class="work-meta">
-                      duration: 1m:00s, language: none
-                    </div>
-                    <div class="work-text">
-                      Grimshader follows the inner monologue of an unnamed
-                      protagonist, sent by his boss Bruce Carmichael on a
-                      night-time drive with an unknown destination. Is he
-                      supposed to get a takeaway from Fusion Takeaway, the local
-                      Chinese restaurant in Stornoway? At this time of night? Or
-                      is something more nefarious going on? Is it somehow
-                      related to the ongoing investigation by Grimshader
-                      internal inquires? The dreamlike journey gradually grows
-                      more surreal and dreamlike before it reaches an abrupt
-                      end.
+                      The mood of the film is that of a bare theatrical
+                      representation that lives only on its characters. A daily
+                      street verbal brawl is portrayed in a performative act
+                      with no beginning nor end. Seems like somebody is about to
+                      fight, but they never get to that, or are they? The scene
+                      takes place somewhere for a whatever reason, in a cycled
+                      loop of gestures and expressions. Some are watching, some
+                      others take pictures, while a woman tries to calm the
+                      clash down.
                     </div>
                   </div>
                 </div>
