--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <nav class="main-nav">
       <h3>Dreams XXL</h3>
+      <div id="nav-date">4 – 21 May 2023</div>
       <div class="modals">
         <button id="open-modal">about</button>
         <button id="close-modal" class="hide">close</button>
@@ -567,7 +568,7 @@
 
         <section class="week" id="week3">
           <div class="week-info">
-            <h1 class="week-title">Week 1: Relationships, relationships</h1>
+            <h1 class="week-title">Week 3: Relationships, relationships</h1>
             <div class="week-date">
               <time>19 – 21 May 2023</time>
               <time>19.00–22.0</time>
