--- a/index.html
+++ b/index.html
@@ -8,27 +8,40 @@
     <title>Dreams XXL</title>
   </head>
   <body>
+    <header>
+      <span id="haeder-title"><strong>Dreams XXL</strong></span>
+      <span id="header-date">4 – 21 May 2023</span>
+    </header>
     <nav class="main-nav">
-      <h3>Dreams XXL</h3>
-      <div id="nav-date">4 – 21 May 2023</div>
       <div class="modals">
         <button id="open-modal">about</button>
-        <button id="close-modal" class="hide">close</button>
+        <button id="close-modal" class="hide">program</button>
       </div>
     </nav>
     <div class="main-container">
       <div id="about-container" class="about">
-        <div>
+        <main>
           <div class="introduction">
             <p>
-              Laak.Club presents its first exhibition, curated with Home Cinema
-              & wysiwyg. The first iteration of Laak’s shows will present a
-              narrative of selected time-based works, screened in XXL format .
-              Dreams present themselves as cinematic experiences. Dreams are
-              fantastical expressions of our unconscious drives. Whatever we
-              repress, leaks through the cracks of the night, into our minds.
-              They are mysterious juxtapositions of displaced subjects and
-              objects. We generate doubling, multiplying selves, mirror images,
+              <a href="https://www.instagram.com/laak.club/" target="_blank"
+                >laak.club</a
+              >
+              presents its first exhibition, curated with
+              <a
+                href="https://www.instagram.com/homecinemaaaaaaaa/"
+                target="_blank"
+                >Home Cinema</a
+              >
+              &
+              <a href="https://www.instagram.com/wysiwygcinema/" target="_blank"
+                >wysiwyg</a
+              >. The first iteration of Laak’s shows will present a narrative of
+              selected time-based works, screened in XXL format . Dreams present
+              themselves as cinematic experiences. Dreams are fantastical
+              expressions of our unconscious drives. Whatever we repress, leaks
+              through the cracks of the night, into our minds. They are
+              mysterious juxtapositions of displaced subjects and objects. We
+              generate doubling, multiplying selves, mirror images,
               metamorphosis, bodily disintegration. Stretched, expanded, zoomed
               realities. Discontinuous narratives, fragmented projections.
               Dreams draw landscapes of possibilities. It is within the
@@ -66,10 +79,10 @@
               <a href="">Verena Blok</a>
             </p>
           </div>
-        </div>
+        </main>
         <footer>
-          <time> May 4th — May 21st 2023</time>
-          <time> Fri — Sun, 19.00–22.00</time>
+          <time class="date"><strong>4 — 21 May 2023</strong></time>
+          <time class="hour"> Fri — Sun, 19.00–22.00</time>
           <address>
             <a href="https://goo.gl/maps/oHv7GgMDbgn5yCqT7" target="_blank"
               >Laak, Lulofsstraat 59, Den Haag</a
@@ -185,7 +198,9 @@
               <li>
                 <div class="work-header" onclick="clickHeader(this)">
                   <div class="work-artist">Giulia Jimenez</div>
-                  <div class="work-title"><strong>Cataratas</strong>(2019)</div>
+                  <div class="work-title">
+                    <strong>Cataratas</strong> (2019)
+                  </div>
                 </div>
                 <div class="work-content">
                   <figure>
@@ -668,7 +683,7 @@
                 <div class="work-header" onclick="clickHeader(this)">
                   <div class="work-artist">Dylan Spencer-Davidson</div>
                   <div class="work-title">
-                    <strong>Affective Dynamics Study Group</strong>(2020)
+                    <strong>Affective Dynamics Study Group</strong> (2020)
                   </div>
                 </div>
                 <div class="work-content">
