--- a/index.html
+++ b/index.html
@@ -94,7 +94,41 @@
       <div id="works-container" class="works">
         <section class="week" id="week1">
           <div class="week-info">
-            <h1 class="week-title">Week 1: Peoples places and things</h1>
+            <div class="week-title">
+              <h1>Week 1: Peoples places and things</h1>
+              <svg
+                version="1.1"
+                id="Layer_1"
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+                x="0px"
+                y="0px"
+                viewBox="0 0 570.22 24.62"
+                style="enable-background: new 0 0 570.22 24.62"
+                xml:space="preserve"
+              >
+                <style type="text/css">
+                  .st0 {
+                    fill: none;
+                    stroke: #000000;
+                    stroke-width: 2;
+                    stroke-miterlimit: 10;
+                  }
+                </style>
+                <path
+                  class="st0"
+                  d="M21.94,16.52c143.58-1.22,258.33,14.67,400.08-0.48c29.21-3.12,58.2-7.56,87.74-8.64
+	c20.04-0.74,43.39,1.23,54.13,12.41c9.53-4.19-8.96-6.38,2.49-6.19c6.32,0.1-5.44,2.85-7.46,6.8c-50.89,1.25-51.86,0.98-102.71-0.81
+	c-26.45-0.93-52.99-2.27-79.39-0.8c-12.61,0.7-25.16,2.04-37.81,2.03c-13.89-0.01-27.66-1.65-41.54-2.16
+	c-26.06-0.95-52.42,2.09-78.18-0.68c-16.98-1.82-33.22-6.13-50.29-7.56c-51.23-4.29-104.2,17.57-153.01,6.46
+	c60.28-1.55,120.63-0.92,180.94-0.28c32.67,0.34,65.34,0.69,98.01,1.03c33.91,0.36,67.83,0.71,101.7,1.83
+	c55.05,1.81,111.29,5.55,164.49-3.96c-16.73,0.04-33.01-3.22-49.49-5.13c-58.42-6.75-118.09,3.58-177.41,3.37
+	c-29.22-0.11-58.52-2.78-87.57-0.66c-16.56,1.21-32.76,3.95-49.21,5.69c-34.16,3.6-69,2.81-103.57,2.01
+	c-24.83-0.58-50.04-1.19-73.7-6.2C78.6,19.24,136.62,5.01,195.43,3.78c29.44-0.62,58.83,2.03,88.28,2.04
+	c36.56,0.01,72.92-4.03,109.48-3.82c28.62,0.17,57.2,2.97,84.66,8.29c13.97,2.71,27.8,6.09,42.3,7c14.5,0.91,30.2-1.01,40.75-7.63"
+                />
+              </svg>
+            </div>
             <div class="week-date">
               <time>4 may 2023 (opening)</time>
               <time>5 – 7 May 2023</time>
@@ -332,7 +366,44 @@
 
         <section class="week" id="week2">
           <div class="week-info">
-            <h1 class="week-title">Week 2: Ecstasy</h1>
+            <div class="week-title">
+              <h1>Week 2: Ecstasy</h1>
+              <svg
+                version="1.1"
+                id="Layer_1"
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+                x="0px"
+                y="0px"
+                viewBox="0 0 570.22 24.62"
+                style="enable-background: new 0 0 570.22 24.62"
+                xml:space="preserve"
+              >
+                <style type="text/css">
+                  .st0 {
+                    fill: none;
+                    stroke: #000000;
+                    stroke-width: 2;
+                    stroke-miterlimit: 10;
+                  }
+                </style>
+                <path
+                  class="st0"
+                  d="M8.32,16.24c-1.11-3.1-0.45-6.77,1.66-9.3c16.62,5.57,34.24,8.15,51.76,7.58c22.65-0.74,45.35-6.69,67.74-3.14
+             c6.5,1.03,12.89,2.85,19.45,3.37c6.17,0.49,12.36-0.19,18.51-0.8c61.59-6.06,123.62-4.99,185.5-3.92
+             c8.14,0.14,16.27,0.28,24.41,0.42c30.82,0.54,61.64,1.07,92.47,1.61c22.46,0.39,44.96,0.78,67.28,3.37
+             c8.99,1.04,19.44,1.96,25.76-4.52c-57.01,4.39-114.28,5.32-171.4,2.77c-9.93-0.44-19.99-1.01-29.43-4.12
+             c-8.59-2.82-16.46-3.68-25.22-5.89c-13.48-3.4-27.61-4.25-41.31-1.9c-25.36,4.36-51.19,5.96-76.9,4.76
+             c-8.16-0.38-16.41-1.03-24.44,0.47c-5.46,1.02-10.71,3.02-16.19,3.94c-6.64,1.12-13.44,0.62-20.16,0.2
+             C112,8.38,65.92,9.96,20.41,15.88c0.15-2.46,0.3-4.92,0.46-7.38c5.41-5.63,14.65-5.22,21.97-2.49s13.96,7.32,21.6,8.97
+             c9.87,2.12,20.07-0.93,30.17-0.99c14.25-0.08,27.75-0.21,41.56,3.29s29.83,8.19,40.91-0.77c4.43-3.58,7.73-6.47,12.42-9.7
+             c4.69-3.22,10.41-0.55,16.02-1.43c24.26-3.8,49.6-4.43,72.03,5.58c8.76,3.91,17.15,8.83,26.44,11.21
+             c19.34,4.94,39.46-1.71,59.03-5.63c44.93-8.98,91.44-3.36,136.55,4.69c-2.63-2.9,0.65-7.82,4.51-8.54c3.85-0.72,7.7,0.96,11.57,1.56
+             c7.35,1.15,14.7-1.58,21.64-4.25c-16.59-10.26-39.42,4.71-57.31-3.03c-6.61-2.86-12.26-4.74-19.46-4.81
+             c-11.06-0.11-21.83,9.52-30.96,3.28"
+                />
+              </svg>
+            </div>
             <div class="week-date">
               <time>12 – 14 May 2023</time>
               <time>19.00–22.00 (opening)</time>
@@ -583,7 +654,41 @@
 
         <section class="week" id="week3">
           <div class="week-info">
-            <h1 class="week-title">Week 3: Relationships, relationships</h1>
+            <div class="week-title">
+              <h1>Week 3: Relationships, relationships</h1>
+              <svg
+                version="1.1"
+                id="Layer_1"
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+                x="0px"
+                y="0px"
+                viewBox="0 0 570.22 24.62"
+                style="enable-background: new 0 0 570.22 24.62"
+                xml:space="preserve"
+              >
+                <style type="text/css">
+                  .st0 {
+                    fill: none;
+                    stroke: #000000;
+                    stroke-width: 2;
+                    stroke-miterlimit: 10;
+                  }
+                </style>
+                <path
+                  class="st0"
+                  d="M5.17,7.54c64.28,1.05,128.57,2.1,192.85,3.15c12.21,0.2,24.71,0.45,36.1,4.66c5.59,2.06,10.9,5.07,16.83,5.91
+             c5.47,0.77,11.01-0.37,16.47-1.21c44.29-6.83,90.27,6.13,134.2-2.58c12.74-2.53,25.88-6.86,38.44-3.57
+             c6.3,1.65,11.94,5.14,18.2,6.93c8.48,2.43,17.56,1.63,26.37,0.8c25-2.34,50-4.69,75-7.03c-32.37-0.07-64.74-0.14-97.11-0.2
+             c-20.33-0.04-40.76-0.09-60.83-3.22c-18.59-2.9-37-8.44-55.82-7.57c-10.38,0.48-20.54,2.91-30.76,4.71
+             c-71.02,12.5-144.99-5.43-216.04,6.94c-10.35,1.8-20.6,4.25-31.03,5.55c-19.52,2.44-39.57,0.84-58.39-4.68
+             c-0.49-6.21,7.94-8.92,14.41-9.52c34.28-3.21,69.06-5.6,103-0.01c11.16,1.84,22.3,4.54,33.62,4.25c7.99-0.21,15.86-1.9,23.84-2.39
+             c19.38-1.19,39.15,2.09,53.96,14.13c15.98-9.89,32.54-17,51.29-20.06c10.98-1.79,22.21-1.07,33.32-0.34
+             c34.55,2.27,69.11,4.53,103.66,6.8c7.96,0.52,15.95,1.04,23.9,0.38c4.55-0.38,9.07-1.15,13.64-1.21c7.38-0.09,14.63,1.68,21.87,3.05
+             c25.85,4.89,52.74,4.73,78.53-0.46"
+                />
+              </svg>
+            </div>
             <div class="week-date">
               <time>19 – 21 May 2023</time>
               <time>19.00–22.0</time>
